--- a/index.html
+++ b/index.html
@@ -19,13 +19,31 @@
                     </div>
                     <div class="header__hero--h2">
                         <h2>I'm A Web Developer.</h2>
-                    </div>
-                    <div class="header__hero--scroll">
-                        <span>Scroll Down</span>
-                    </div>
+                    </div> 
+                </div>
+                <div class="header__down">
+                    <span>Scroll Down</span>
                 </div>
             </div>
         </header>
+
+        <nav>
+            <div class="sidebar__container">
+                <ul>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">My Portfolio</a></li>
+                    <li><a href="#">Code Examples</a></li>
+                    <li><a href="#">SCS Scheme</a></li>
+                    <li><a href="#">Contact Me</a></li>
+                </ul>
+
+                <div class="sidebar__socials">
+                    <a href="#">LinkedIn</a>
+                    <a href="#">GitHub</a>
+                    <a href="#">MattDean.tech</a>
+                </div>
+            </div>
+        </nav>
 
         <main>
             <div class="portfolio__container">
@@ -83,8 +101,9 @@
                     <textarea id="message" name="message" rows="5" required></textarea>
                 
                     <button type="submit">Submit</button>
-                </form>
+                </form>     
             </div>
+          <div class="footer__top"><span>Back To Top</span></div>
         </footer>
     </div>
    </body>
