--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-       <title>Title</title>
+       <title>Matt Dean | Web Developer</title>
+       <script src="https://kit.fontawesome.com/ee55ddb165.js" crossorigin="anonymous"></script>
        <link rel="stylesheet" href="css/style.css">
    </head>
       
@@ -23,13 +24,18 @@
                 </div>
                 <div class="header__down">
                     <span>Scroll Down</span>
+                    <i class="fa-solid fa-angles-down"></i>
                 </div>
             </div>
         </header>
 
         <nav>
             <div class="sidebar__container">
-                <ul>
+                <div class="sidebar__logo">
+                    <span>MD</span>
+                </div>
+
+                <ul class="sidebar__links">
                     <li><a href="#">About Me</a></li>
                     <li><a href="#">My Portfolio</a></li>
                     <li><a href="#">Code Examples</a></li>
@@ -103,7 +109,10 @@
                     <button type="submit">Submit</button>
                 </form>     
             </div>
-          <div class="footer__top"><span>Back To Top</span></div>
+          <div class="footer__top">
+            <i class="fa-solid fa-angles-up"></i>
+            <span>Back To Top</span>
+          </div>
         </footer>
     </div>
    </body>
