--- a/index.html
+++ b/index.html
@@ -19,20 +19,21 @@
             <div class="header__container">
                 <div class="header__hero">
                     <div class="header__hero--h1">
-                        <h1>My Name Is Matt Dean.</h1>
+                        <h1>My Name Is<br> Matt Dean.</h1>
                     </div>
                     <div class="header__hero--h2">
                         <h2>I'm A Web Developer.</h2>
                     </div> 
                 </div>
                 <div class="header__down">
-                    <span>Scroll Down</span>
+                    <span>Scroll Down</span><br>
                     <i class="fa-solid fa-angles-down"></i>
                 </div>
             </div>
         </header>
 
         <nav>
+            <div class="sidebar__burger"><i class="fa-solid fa-bars"></i></div>
             <div class="sidebar__container">
                 <div class="sidebar__logo">
                     <span>MD</span>
