--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
         <header>
             <div class="header__container">
                 <section id="hero" class="header__hero">
-                    <div class="header__hero--h1">
-                        <h1>My Name Is<br> Matt Dean.</h1>
+                    <div class="header__hero--img">
+                        <img src="assets/typography/portfolio_hero-text-0c0d0d.png">
                     </div>
-                    <div class="header__hero--h2">
-                        <h2>I'm A Web Developer.</h2>
-                    </div> 
                     <div class="header__down">
                         <span>Scroll Down</span><br>
                        <a href="#projects"><i class="fa-solid fa-angles-down"></i></a>
@@ -56,34 +53,33 @@
         </nav>
 
         <main>
-            <div class="portfolio__container">
-                <section id="projects" class="portfolio__grid">
-                    <article class="portfolio__grid--card">
+            <div class="project__container">
+                <section id="projects" class="project__grid">
+                    <article class="project__grid--card">
                         <h3>Project One</h3>
                         <a href="#"><i class="fa-solid fa-angle-right"></i></a>
                     </article>
-                    <article class="portfolio__grid--card">
+                    <article class="project__grid--card">
                         <h3>Project Two</h3>
                         <a href="#"><i class="fa-solid fa-angle-right"></i></a>
                     </article>
-                    <article class="portfolio__grid--card">
+                    <article class="project__grid--card">
                         <h3>Project Three</h3>
                         <a href="#"><i class="fa-solid fa-angle-right"></i></a>
                     </article>
-                    <article class="portfolio__grid--card">
+                    <article class="project__grid--card">
                         <h3>Project Four</h3>
                         <a href="#"><i class="fa-solid fa-angle-right"></i></a>
                     </article>
-                    <article class="portfolio__grid--card">
+                    <article class="project__grid--card">
                         <h3>Project Five</h3>
                         <a href="#"><i class="fa-solid fa-angle-right"></i></a>
                     </article>
-                    <article class="portfolio__grid--card">
+                    <article class="project__grid--card">
                         <h3>Project Six</h3>
                         <a href="#"><i class="fa-solid fa-angle-right"></i></a>
                     </article> 
-                    <div class="portfolio__down">
-                        <span>Scroll Down</span><br>
+                    <div class="project__down">
                        <a href="#contact"><i class="fa-solid fa-angles-down"></i></a>
                     </div> 
                 </section>
@@ -92,7 +88,6 @@
         </main>
 
         <footer>
-            <div class="contact__container">
                 <section id="contact" class="contact__container">
                     <h2>Lets Connect...</h2>
                     <span class="icon__phone"><a href="tel:+447368938360"><i class="fa-solid fa-mobile-retro"></i></a>+44(0)7368 938360</span>
@@ -123,7 +118,6 @@
                         <span>Back To Top</span>
                     </div>  
                 </section>
-            </div>
         </footer>
     </div>
    </body>
