--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                     <li><a href="#">My Portfolio</a></li>
                     <li><a href="#">Code Examples</a></li>
                     <li><a href="#">SCS Scheme</a></li>
-                    <li><a href="#">Contact Me</a></li>
+                    <li><a href="#contact">Contact Me</a></li>
                 </ul>
 
                 <div class="sidebar__socials">
-                    <i class="fa-brands fa-linkedin"></i><a href="#">LinkedIn</a>
-                    <i class="fa-brands fa-github"></i><a href="#">GitHub</a>
-                    <i class="fa-solid fa-globe"></i><a href="#">MattDean.tech</a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-solid fa-globe"></i></a>
                 </div>
             </div>
         </nav>
