--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
             <div class="sidebar__burger"><i class="fa-solid fa-bars"></i></div>
             <div class="sidebar__container">
                 <div class="sidebar__logo">
-                    <span>MD</span>
+                    <a href="#hero"><span>MD</span></a>
                 </div>
 
                 <ul class="sidebar__links">
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">My Portfolio</a></li>
-                    <li><a href="#">Code Examples</a></li>
-                    <li><a href="#">SCS Scheme</a></li>
+                    <li><a href="about-me.html">About Me</a></li>
+                    <li><a href="#projects">My Portfolio</a></li>
+                    <li><a href="coding-examples.html">Coding Examples</a></li>
+                    <li><a href="scs-scheme.html">SCS Scheme</a></li>
                     <li><a href="#contact">Contact Me</a></li>
                 </ul>
 
                 <div class="sidebar__socials">
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-solid fa-globe"></i></a>
+                    <a href="https://www.linkedin.com/in/matt-dean-29263055/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/MattJDean"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://mattdean.tech/"><i class="fa-solid fa-globe"></i></a>
                 </div>
             </div>
         </nav>
