--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="header__container">
                 <section id="hero" class="header__hero">
                     <div class="header__hero--img">
-                        <img src="assets/typography/portfolio_hero-text-0c0d0d.png">
+                        <img src="assets/typography/Matt-Dean-Hero-Text-833x411.png">
                     </div>
                     <div class="header__down">
                         <span>Scroll Down</span><br>
@@ -33,7 +33,7 @@
             <div class="sidebar__burger"><i class="fa-solid fa-bars"></i></div>
             <div class="sidebar__container">
                 <div class="sidebar__logo">
-                    <a href="#hero"><span>MD</span></a>
+                    <a href="#hero"><img src="/assets/typography/MD-logo.png"></a>
                 </div>
 
                 <ul class="sidebar__links">
