--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="sidebar__burger"><i class="fa-solid fa-bars"></i></div>
             <div class="sidebar__container">
                 <div class="sidebar__logo">
-                    <a href="#hero"><img src="/assets/typography/MD-logo.png"></a>
+                    <a href="#hero"><span>MD</span></a>
                 </div>
 
                 <ul class="sidebar__links">
@@ -87,7 +87,7 @@
             </div>
         </main>
 
-        <footer>
+        
                 <section id="contact" class="contact__container">
                     <h2>Lets Connect...</h2>
                     <span class="icon__phone"><a href="tel:+447368938360"><i class="fa-solid fa-mobile-retro"></i></a>  +44(0)7368 938360</span>
@@ -118,6 +118,9 @@
                         <span>Back To Top</span>
                     </div>  
                 </section>
+                
+        <footer>
+            <span class="footer__license"><p>&copy; 2024 Matt Dean.</p></span>
         </footer>
     </div>
    </body>
