--- a/scs-scheme.html
+++ b/scs-scheme.html
@@ -12,7 +12,7 @@
     <title>Matt Dean | SCS Scheme</title>
 </head>
 <body>
-
+    <div id="wrapper">
     <nav>
         <div class="sidebar__burger"><i class="fa-solid fa-bars"></i></div>
         <div class="sidebar__container">
@@ -22,10 +22,10 @@
 
             <ul class="sidebar__links">
                 <li><a href="about-me.html">About Me</a></li>
-                <li><a href="#projects">My Portfolio</a></li>
+                <li><a href="index.html#projects">My Portfolio</a></li>
                 <li><a href="coding-examples.html">Coding Examples</a></li>
                 <li><a href="scs-scheme.html">SCS Scheme</a></li>
-                <li><a href="#contact">Contact Me</a></li>
+                <li><a href="index.html#contact">Contact Me</a></li>
             </ul>
 
             <div class="sidebar__socials">
@@ -65,9 +65,10 @@
             </div>
         </section>
     </div>
-    <footer>
-        <span class="footer__license"><p>&copy; 2024 Matt Dean.</p></span>
-    </footer>
+        <footer>
+            <span class="footer__license"><p>&copy; 2024 Matt Dean.</p></span>
+        </footer>
+    </div>
 </body>
 </html>
     
