--- a/about-me.html
+++ b/about-me.html
@@ -17,15 +17,15 @@
         <div class="sidebar__burger"><i class="fa-solid fa-bars"></i></div>
         <div class="sidebar__container">
             <div class="sidebar__logo">
-                <a href="#hero"><span>MD</span></a>
+                <a href="index.html"><span>MD</span></a>
             </div>
 
             <ul class="sidebar__links">
                 <li><a href="about-me.html">About Me</a></li>
-                <li><a href="#projects">My Portfolio</a></li>
+                <li><a href="index.html#projects">My Portfolio</a></li>
                 <li><a href="coding-examples.html">Coding Examples</a></li>
                 <li><a href="scs-scheme.html">SCS Scheme</a></li>
-                <li><a href="#contact">Contact Me</a></li>
+                <li><a href="index.html#contact">Contact Me</a></li>
             </ul>
 
             <div class="sidebar__socials">
