--- a/coding-examples.html
+++ b/coding-examples.html
@@ -53,7 +53,7 @@
         </section>
     </div>
     <footer>
-        <span class="footer__license"><p>&copy; 2024 Matt Dean.</p></span>
+        <!-- <span class="footer__license">&copy; 2024 Matt Dean.</span> -->
     </footer>
 </body>
 </html>
