--- a/index.html
+++ b/index.html
@@ -55,31 +55,36 @@
 
         <main>
             <div class="project__container">
-                <section id="projects" class="project__grid">
+                <h3>My Projects</h3>
+                <section id="projects" class="project__grid"> 
                     <article class="project__grid--card">
-                        <h3>Project One</h3>
-                        <img src="" />
+                        <img src="assets/img/coming-soon.png"/>
                     </article>
                     <article class="project__grid--card">
-                        <h3>Project Two</h3>
-                        <a href="#"><i class="fa-solid fa-angle-right"></i></a>
+                        <img src="assets/img/coming-soon.png"/>
                     </article>
                     <article class="project__grid--card">
-                        <h3>Project Three</h3>
-                        <a href="#"><i class="fa-solid fa-angle-right"></i></a>
+                        <img src="assets/img/coming-soon.png"/>
                     </article>
                     <article class="project__grid--card">
-                        <h3>Project Four</h3>
-                        <a href="#"><i class="fa-solid fa-angle-right"></i></a>
+                        <img src="assets/img/coming-soon.png"/>
                     </article>
                     <article class="project__grid--card">
-                        <h3>Project Five</h3>
-                        <a href="#"><i class="fa-solid fa-angle-right"></i></a>
+                        <img src="assets/img/coming-soon.png"/>
                     </article>
                     <article class="project__grid--card">
-                        <h3>Project Six</h3>
-                        <a href="#"><i class="fa-solid fa-angle-right"></i></a>
-                    </article> 
+                        <img src="assets/img/coming-soon.png"/>
+                    </article>
+                    <article class="project__grid--card">
+                        <img src="assets/img/coming-soon.png"/>
+                    </article>
+                    <article class="project__grid--card">
+                        <img src="assets/img/coming-soon.png"/>
+                    </article>
+                    <article class="project__grid--card">
+                        <img src="assets/img/coming-soon.png"/>
+                    </article>
+                    
                     <div class="project__down">
                        <a href="#contact"><i class="fa-solid fa-angles-down"></i></a>
                     </div> 
