--- a/coding-examples.html
+++ b/coding-examples.html
@@ -39,12 +39,11 @@
     <div class="examples__container">
         <section id="examples">
             <div class="examples__header">
-                <h1>Coming Soon...</h1>
-                <p>Examples of my code will be coming soon.</p>
+                <h1>Coding Examples</h1>
             </div>
             
             <div class="examples__image">
-                <img src="your-image-url-here.jpg" alt="Coming Soon">
+                <img src="assets/img/coming-soon.png" alt="Coming Soon">
             </div>
             
             <div class="examples__content">
