--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <i class="fa-solid fa-bars"></i>
         </div>
 
-        <!----------------------------------------------------------------Hero Section-->
-        <div id="hero" class="hero__container">
+        <!----------------------------------------------------------------Hero Section--xs-->
+        <div id="hero" class="hero__container--xs">
             <img src="/assets/typography/Matt-Dean-Hero-Text-833x411.png">
 
             <!----------------------------------------------------------------Scroll Snap Top--xs-->
@@ -158,11 +158,6 @@
         <div id="hero" class="hero__container">
             <img src="/assets/typography/Matt-Dean-Hero-Text-833x411.png">
 
-            <!----------------------------------------------------------------Scroll Snap Top--md-->
-            <div class="hero__scroll">
-                <span>Scroll Down</span><br>
-               <a href="#projects"><i class="fa-solid fa-angles-down"></i></a>
-            </div>
         </div>
 
         <!--------------------------------------Projects Section-->
@@ -209,7 +204,7 @@
                     <button class="form__submit--md" type="submit">Submit</button>
                 </form>
             </div> 
-      </div>
+    </div>
 
 <!-------------------------------------------------------------------------------------------------------------------------------------------------------------->
 <!--------------------------------------------------------------------------------------------------------------------------------------------md-Container-End-->
