--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             <div class="project__card--7"><span>Coming Soon</span></div>
             <div class="project__card--8"><span>Coming Soon</span></div>
             <div class="project__card--9"><span>Coming Soon</span></div>
-
+            <div class="project__card--10"><span>Coming Soon</span></div>
+        
               <!-------------------------------------------Scroll Snap Mid--xs-->
               <div class="project__scroll">
                 <a href="#contact">
