--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    </head>
     
    <body>
-    <div id="wrapper">
+  
 
     <!--------------------------------------------------------------------------------------------------------------------------------------->
     <!----------------------------------------------------xs-Container-Start----------------------------------------------------------------->
@@ -156,14 +156,14 @@
 
 
         <!----------------------------------------------------------------Hero Section-->
-        <div id="hero" class="hero__container">
+        <div id="hero" class="hero__container--md">
             <img src="/assets/typography/Matt-Dean-Hero-Text-833x411.png">
 
         </div>
 
         <!--------------------------------------Projects Section-->
         <div class="project__container--md">
-            <h3>My Projects</h3> 
+            <h3><span>My Projects</span></h3> 
 
             <div class="project__card--1"><span>Coming Soon</span></div>
             <div class="project__card--2"><span>Coming Soon</span></div>
@@ -204,8 +204,12 @@
                 
                     <button class="form__submit--md" type="submit">Submit</button>
                 </form>
-            </div> 
-    </div>
+            </div>
+            <!--------------------------------------------------------Footer Licence-->      
+        </div>
+        <footer>
+            <div id="footer__licence">&copy; 2024 Matt Dean.</div>
+        </footer> 
 
 <!-------------------------------------------------------------------------------------------------------------------------------------------------------------->
 <!--------------------------------------------------------------------------------------------------------------------------------------------md-Container-End-->
