1240 27/08/24 - version uploaded to cPanel

--- a/scs-scheme.html
+++ b/scs-scheme.html
@@ -1,40 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/ee55ddb165.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Matt Dean | SCS Scheme</title>
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Matt Dean | Web Developer</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://rsms.me/">
+        <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+        <script src="https://kit.fontawesome.com/ee55ddb165.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 <body>
     <div id="wrapper">
-    <nav>
-        <div class="sidebar__burger"><i class="fa-solid fa-bars"></i></div>
-        <div class="sidebar__container">
-            <div class="sidebar__logo">
-                <a href="index.html"><span>MD</span></a>
+    
+        <!--------------------------------------------------------------Burger Menu-->
+        <div class="menu__burger">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+        <!---------------------------Side Menu-->
+        <div class="menu__container">
+
+            <!-----------------------------------------------Side Menu Logo-->
+            <div class="menu__logo">
+                <a href="index.html#hero"><span>MD</span></a>
             </div>
 
-            <ul class="sidebar__links">
-                <li><a href="about-me.html">About Me</a></li>
-                <li><a href="index.html#projects">My Portfolio</a></li>
-                <li><a href="coding-examples.html">Coding Examples</a></li>
-                <li><a href="scs-scheme.html">SCS Scheme</a></li>
-                <li><a href="index.html#contact">Contact Me</a></li>
+        
+             <!------------------------------------------------------------Side Menu Links-->
+            <ul class="menu__links">
+                <li><a href="about-me.html"><span>About Me</span></a></li>
+                <li><a href="index.html#projects"><span>My Portfolio</span></a></li>
+                <li><a href="coding-examples.html"><span>Coding Examples</span></a></li>
+                <li><a href="scs-scheme.html"><span>SCS Scheme</span></a></li>
+                <li><a href="index.html#contact"><span>Contact Me</span></a></li>
             </ul>
 
-            <div class="sidebar__socials">
+            <!-----------------------------------------------------------------------------------------------------Side Menu Socials-->
+            <div class="menu__socials">
                 <a href="https://www.linkedin.com/in/matt-dean-29263055/"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/MattJDean"><i class="fa-brands fa-github"></i></a>
                 <a href="https://mattdean.tech/"><i class="fa-solid fa-globe"></i></a>
             </div>
         </div>
-    </nav>
  
     <div class="scs__container">
         <section id="scs-scheme">
