--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
        <link rel="preconnect" href="https://fonts.googleapis.com">
        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
        <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+       <link rel="preconnect" href="https://rsms.me/">
+       <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
        <script src="https://kit.fontawesome.com/ee55ddb165.js" crossorigin="anonymous"></script>
        <link rel="stylesheet" href="css/style.css">
    </head>
@@ -139,11 +141,11 @@
         
              <!------------------------------------------------------------Side Menu Links-->
             <ul class="menu__links">
-                <li><a href="about-me.html">About Me</a></li>
-                <li><a href="#projects">My Portfolio</a></li>
-                <li><a href="coding-examples.html">Coding Examples</a></li>
-                <li><a href="scs-scheme.html">SCS Scheme</a></li>
-                <li><a href="#contact">Contact Me</a></li>
+                <li><a href="about-me.html"><span>About Me</span></a></li>
+                <li><a href="index.html#projects"><span>My Portfolio</span></a></li>
+                <li><a href="coding-examples.html"><span>Coding Examples</span></a></li>
+                <li><a href="scs-scheme.html"><span>SCS Scheme</span></a></li>
+                <li><a href="#contact"><span>Contact Me</span></a></li>
             </ul>
 
             <!-----------------------------------------------------------------------------------------------------Side Menu Socials-->
@@ -179,7 +181,7 @@
         <!-----------------------------------------------------------------------------------------------------------------------------------Contact Section-->
         <div class="contact__container--md">
 
-            <div class="contact__header--md"><h2>Lets Connect...</h2></div>
+            <div class="contact__header--md"><h2><span>Lets Connect...</span></h2></div>
 
             <span class="contact__phone--md"><a href="tel:+447368938360"><i class="fa-solid fa-mobile-retro"></i></a>  +44(0)7368 938360</span>
 
