--- a/scs-scheme.html
+++ b/scs-scheme.html
@@ -49,7 +49,7 @@
     <div class="scs__container">
         <section id="scs-scheme">
             <div class="scs__intro">
-                <h1>Introduction to Scion Coalition Scheme</h1>
+                <h1><span>Scion Coalition Scheme</span></h1>
                 <p>The Scion Coalition Scheme is an intensive, specially tailored training program run by Netmatters in order to give willing candidates the opportunity to enter the industry as web developers. Under the supervision of senior web developers, scions generally aim to complete training within six to nine months. The course is intensive and therefore the level of learning achieved is extensive in a short space of time.</p>
             </div>
             
@@ -58,10 +58,10 @@
             </div> -->
             
             <div class="scs__content">
-                <h3>Treehouse</h3>
+                <h1><span>Treehouse</span></h1>
                     <p>Treehouse is an online learning community, featuring videos covering a number of topics from basic HTML to C# programming, iOS development, data analysis, and more. By completing courses users can earn points, allowing them to track their progress and see how much they?ve covered in certain areas.</p>
 
-                <h3>About Netmatters</h3>
+                <h1><span>About Netmatters</span></h1>
                     <ul>
                         <li>Established in 2008</li>
                         <li>Norfolk's leading technology company</li>
