--- a/coding-examples.html
+++ b/coding-examples.html
@@ -62,7 +62,7 @@
         </section>
     </div>
     <footer>
-        <!-- <span class="footer__license">&copy; 2024 Matt Dean.</span> -->
+        <span class="footer__licence">&copy; 2024 Matt Dean.</span>
     </footer>
 </body>
 </html>
