--- a/scs-scheme.html
+++ b/scs-scheme.html
@@ -75,10 +75,11 @@
             </div>
         </section>
     </div>
-        <footer>
-            <!-- <span class="footer__license">&copy; 2024 Matt Dean.</span> -->
-        </footer>
+       
     </div>
+    <footer>
+        <span class="footer__licence">&copy; 2024 Matt Dean.</span>
+    </footer>
 </body>
 </html>
     
