--- a/about-me.html
+++ b/about-me.html
@@ -124,5 +124,7 @@
     <footer>
         <span class="footer__licence">&copy; 2024 Matt Dean.</span>
     </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
