--- a/coding-examples.html
+++ b/coding-examples.html
@@ -64,5 +64,7 @@
     <footer>
         <span class="footer__licence">&copy; 2024 Matt Dean.</span>
     </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
