--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
 
         <!----------------------------------------------------------------Hero Section-->
         <div id="hero" class="hero__container--md">
+            <div class="hero__text--h1"><h1 id="heroTextTop">My name is Matt Dean.</h1></div>
+            <div class="hero__text--h2"><h2 id="typedTextMd"></h2></div>
             <!-- <img src="/assets/typography/Matt-Dean-Hero-Text-833x411.png"> -->
 
         </div>
