--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
         <!----------------------------------------------------------------Hero Section--xs-->
         <div id="hero" class="hero__container--xs">
             <!-- <img src="/assets/typography/Matt-Dean-Hero-Text-833x411.png"> -->
-            <div class="hero__text--h1"><h1 id="heroTextTop">My name is Matt Dean.</h1></div>
+            <div class="hero__text--h1">
+                <h1 id="heroTextTop">My name is Matt Dean.</h1>
+                <div class="stamp"></div> 
+            </div>
+              
             <div class="hero__text--h2"><h2 id="typedText"></h2></div>
             <!----------------------------------------------------------------Scroll Snap Top--xs-->
             <div class="hero__scroll">
