--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
         </div>
 
         <!----------------------------------------------------------------Hero Section--xs-->
-        <div id="hero" class="hero__container--xs">
-            <!-- <img src="/assets/typography/Matt-Dean-Hero-Text-833x411.png"> -->
+        <div id="hero" class="hero__container--xs hero">
+            
+            <div class="hero__image"><img src="/assets/img/hero-img-table.png"></div>
+            
             <div class="hero__text--h1">
                 <h1 id="heroTextTop">My name is Matt Dean.</h1>
                 <div class="stamp"></div> 
@@ -174,7 +176,7 @@
 
 
         <!----------------------------------------------------------------Hero Section-->
-        <div id="hero" class="hero__container--md">
+        <div id="heroSectionLarge" class="hero__container--md hero">
             <div class="hero__text--h1"><h1 id="heroTextTop">My name is Matt Dean.</h1></div>
             <div class="hero__text--h2"><h2 id="typedTextMd"></h2></div>
             <!-- <img src="/assets/typography/Matt-Dean-Hero-Text-833x411.png"> -->
