--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!----------------------------------------------------------------Hero Section--xs-->
         <div id="hero" class="hero__container--xs hero">
             
-            <div class="hero__image"><img src="/assets/img/hero-img-table.png"></div>
+            <img src="/assets/img/mulberry-paper.jpg">
             
             <div class="hero__text--h1">
                 <h1 id="heroTextTop">My name is Matt Dean.</h1>
@@ -65,7 +65,7 @@
             <div class="hero__text--h2"><h2 id="typedText"></h2></div>
             <!----------------------------------------------------------------Scroll Snap Top--xs-->
             <div class="hero__scroll">
-                <span>Scroll Down</span><br>
+                <span><a href="#projects-xs">Scroll Down</a></span><br>
                <a href="#projects-xs"><i class="fa-solid fa-angles-down"></i></a>
             </div>
         </div>
@@ -177,8 +177,9 @@
 
         <!----------------------------------------------------------------Hero Section-->
         <div id="heroSectionLarge" class="hero__container--md hero">
+            <div class="hero__image--md"><img src="/assets/img/tree-web.png"></div>
             <div class="hero__text--h1"><h1 id="heroTextTop">My name is Matt Dean.</h1></div>
-            <div class="hero__text--h2"><h2 id="typedTextMd"></h2></div>
+            <div class="hero__text--h2"><h2 id="typedTextMd">I'm a web developer.</h2></div>
             <!-- <img src="/assets/typography/Matt-Dean-Hero-Text-833x411.png"> -->
 
         </div>
