--- a/about-me.html
+++ b/about-me.html
@@ -88,10 +88,15 @@
 
                     <!--------------------------------------------------------------About Me Main-->
                     <div class="about__main">
-                            <p>I'm a trainee web developer based in Essex, UK. I'm inspired, enthusiastic and passionate about tech and how it shapes our lives. </p>
-                            <p>I'm currently learning the ropes on the SCS Scion Scheme, where I'm covering HTML, CSS, SCSS, JavaScript and jQuery.</p>
-                            <p>Away from the screen, I'm a music lover, guitar player, keen traveller and a cat fan.</p>
+                            <p>I'm a web developer-in-training based in Essex, UK. I'm enthusiastic and passionate about the solutions tech brings us and the possibilities it inspires. </p>
+                            <p>I'm currently learning the ropes on the <a href="http://www.netmatters.co.uk/train-for-a-career-in-tech">SCS Scion Scheme</a>, where I'm covering HTML, CSS, SCSS, JavaScript, jQuery and PHP.</p>
+                            <p>Away from the screen, I'm a guitarist, a reader and a keen traveller. </p>
+                            <p></p>
+                            <div class="about__cta">
+                                <a href="/index.html#contact" class="contact-button">Contact Me</a>
+                            </div>
                     </div>
+
             </section>
         </div>
 
