--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!----------------------------------------------------------------Hero Section--xs-->
         <div id="hero" class="hero__container--xs hero">
             
-            <img src="/assets/img/mulberry-paper.jpg">
+            <div class="hero__background--xs"></div>
             
             <div class="hero__text--h1">
                 <h1 id="heroTextTop">My name is Matt Dean.</h1>
