--- a/about-me.html
+++ b/about-me.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
         <script src="https://kit.fontawesome.com/ee55ddb165.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" /> 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
 <body>
@@ -73,9 +74,9 @@
         </div>
 
         <!-------------------------------------------------------------------------------------------------- < 768px Viewport-->
-        <div class="about__container">
-            <section id="about">
-                    <!--------------------------------------------------------------About Me Header-->
+        <div id="about" class="about__container">
+            <section class="image">
+                    <!--------------------------------------------------------------About Me Image-->
                     <div class="about__header">
                         <div class="about__header--img"><img src="/assets/img/about-me.png"></div>
                     </div>
@@ -85,18 +86,24 @@
                         <h1 class="headline__h1"><span>Great to meet you,</span></h1>
                         <h2 class="headline__h2"><span>I'm Matt.</span></h2>
                     </div>
-
-                    <!--------------------------------------------------------------About Me Main-->
-                    <div class="about__main">
-                            <p>I'm a web developer-in-training based in Essex, UK. I'm enthusiastic and passionate about the solutions tech brings us and the possibilities it inspires. </p>
-                            <p>I'm currently learning the ropes on the <a href="http://www.netmatters.co.uk/train-for-a-career-in-tech">SCS Scion Scheme</a>, where I'm covering HTML, CSS, SCSS, JavaScript, jQuery and PHP.</p>
+            </section>
+                    <!--------------------------------------------------------------About Me Text-->
+            <section class="text">        
+                    <div class="about__text">
+                            <p>I'm a web developer-in-training based in Essex, UK. I'm enthusiastic and passionate about the ever-evolving  solutions tech brings us and the possibilities it inspires. </p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, dolorum eveniet blanditiis corrupti totam, alias nobis accusamus accusantium enim illum expedita est aliquam magni quaerat excepturi sapiente, amet qui. Natus?</p>
                             <p>Away from the screen, I'm a guitarist, a reader and a keen traveller. </p>
-                            <p></p>
-                            <div class="about__cta">
-                                <a href="/index.html#contact" class="contact-button">Contact Me</a>
-                            </div>
+                            <i class="html"></i>
+                            <i class="html"></i>
+                            <i class="html"></i>
+                            <i class="html"></i>
+                            <i class="html"></i>
+                            <i class="html"></i>
+                            <i class="html"></i>
                     </div>
-
+                    <div class="about__cta">
+                        <a href="/index.html#contact" class="contact-button">Contact Me</a>
+                    </div>
             </section>
         </div>
 
