--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
        <script src="https://kit.fontawesome.com/ee55ddb165.js" crossorigin="anonymous"></script>
        <link rel="stylesheet" href="css/style.css">
        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+       
    </head>
     
    <body>
@@ -37,17 +38,17 @@
             </div>
             <div class="burger__hidden hideNav hidden">
                 <ul class="burger__links">
-                    <li class="burger__links--item"><a href="about-me.html" class="burger__links--anchor"><span>About Me</span></a></li>
-                    <li class="burger__links--item"><a href="index.html#projects" class="burger__links--anchor"><span>My Portfolio</span></a></li>
-                    <li class="burger__links--item"><a href="coding-examples.html" class="burger__links--anchor"><span>Coding Examples</span></a></li>
-                    <li class="burger__links--item"><a href="scs-scheme.html" class="burger__links--anchor"><span>SCS Scheme</span></a></li>
-                    <li class="burger__links--item"><a href="index.html#contact" class="burger__links--anchor"><span>Contact Me</span></a></li>
+                    <li class="burger__links item"><a href="about-me.html" class="burger__links--anchor"><span>About Me</span></a></li>
+                    <li class="burger__links item"><a href="index.html#projects" class="burger__links--anchor"><span>My Portfolio</span></a></li>
+                    <li class="burger__links item"><a href="coding-examples.html" class="burger__links--anchor"><span>Coding Examples</span></a></li>
+                    <li class="burger__links item"><a href="scs-scheme.html" class="burger__links--anchor"><span>SCS Scheme</span></a></li>
+                    <li class="burger__links item"><a href="index.html#contact" class="burger__links--anchor"><span>Contact Me</span></a></li>
                 </ul>
 
                 <ul class="burger__socials">
-                    <li class="burger__socials--item"><a href="https://www.linkedin.com/in/matt-dean-29263055/" class="burger__socials--anchor"><i class="fa-brands fa-linkedin"></i></a></li>
-                    <li class="burger__socials--item"><a href="https://github.com/MattJDean" class="burger__socials--anchor"><i class="fa-brands fa-github"></i></a></li>
-                    <li class="burger__socials--item"><a href="https://mattdean.tech/" class="burger__socials--anchor"><i class="fa-solid fa-globe"></i></a></li>
+                    <li class="burger__socials item"><a href="https://www.linkedin.com/in/matt-dean-29263055/" class="burger__socials--anchor"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li class="burger__socials item"><a href="https://github.com/MattJDean" class="burger__socials--anchor"><i class="fa-brands fa-github"></i></a></li>
+                    <li class="burger__socials item"><a href="https://mattdean.tech/" class="burger__socials--anchor"><i class="fa-solid fa-globe"></i></a></li>
                 </ul>
             </div>
         </div>
